gitops/apps/base/drone-demo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drone-demo
  labels:
    app.kubernetes.io/part-of: mwc26-demo
