gitops/apps/base/drone-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: drone-demo
  labels:
    app: dashboard
spec:
  selector:
    app: dashboard
  ports:
    - port: 80
      targetPort: 5000
      name: http
  type: ClusterIP
